# src/app.ts
@@ -2,6 +2,7 @@ import express from "express";
 import cors from "cors";
 import authRoutes from "./routes/auth.route";
 import foodRoutes from "./routes/food.route";
+import profileRoutes from "./routes/profile.route";
 import { errorHandler } from "./middlewares/error.middleware";
 import { swaggerDocs } from "./docs/swagger";
 
@@ -28,6 +29,7 @@ app.get("/", (req: express.Request, res: express.Response) => {
 });
 app.use("/api/auth", authRoutes);
 app.use("/api/foods", foodRoutes);
+app.use("/api/profile", profileRoutes);
 
 app.use(errorHandler);
 
